--- a/src/components/inputtext.css
+++ b/src/components/inputtext.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 5px;
 }
 .inputtxt_cont textarea{
     width: 60%;
