--- a/src/components/user.css
+++ b/src/components/user.css
@@ -1,11 +1,16 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 .cont
 {
    display:flex,;
    flex-direction:column;
-   margin-top:140px;
+   /* margin-top:140px; */
+   align-content: center;
    height: 300px;
    /* background-color: red; */
+    /* width: 1300px; */
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 .first_cont
 {
